--- a/app/src/main/res/layout/activity_beneficios.xml
+++ b/app/src/main/res/layout/activity_beneficios.xml
@@ -139,72 +139,85 @@
 
         />
 
-    <ImageButton
-        android:id="@+id/btnBronce"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="8dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
 
-        android:background="#ffff"
-        android:padding="5dp"
+
+        android:layout_marginTop="8dp"
+
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linea13"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13"
-        app:srcCompat="@drawable/ic_bronce_no_seleccionado" />
+        app:layout_constraintTop_toBottomOf="@+id/textView13">
 
-    <ImageButton
-        android:id="@+id/btnPlata"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        <ImageButton
+            android:id="@+id/btnBronce"
+            android:layout_width="76dp"
+            android:layout_height="74dp"
 
-        android:background="#ffff"
-        android:padding="5dp"
+            android:background="#ffff"
+            android:padding="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/linea13"
+            app:layout_constraintTop_toBottomOf="@+id/textView13"
+            app:layout_constraintVertical_bias="0.587"
+            app:srcCompat="@drawable/ic_bronce_no_seleccionado"
+            tools:layout_editor_absoluteX="0dp" />
 
-        app:layout_constraintBottom_toBottomOf="@+id/btnBronce"
-        app:layout_constraintStart_toEndOf="@+id/btnBronce"
-        app:layout_constraintTop_toTopOf="@+id/btnBronce"
-        app:srcCompat="@drawable/ic_plata_no_seleccionado" />
+        <ImageButton
+            android:id="@+id/btnPlata"
+            android:layout_width="76dp"
+            android:layout_height="74dp"
 
-    <ImageButton
-        android:id="@+id/btnOro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            android:background="#ffff"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/btnBronce"
+            app:layout_constraintStart_toEndOf="@+id/btnBronce"
+            app:layout_constraintTop_toTopOf="@+id/btnBronce"
+            app:srcCompat="@drawable/ic_plata_no_seleccionado" />
 
-        android:background="#ffff"
-
-
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnPlata"
-        app:layout_constraintStart_toEndOf="@+id/btnPlata"
-        app:layout_constraintTop_toTopOf="@+id/btnPlata"
-        app:srcCompat="@drawable/ic_oro_no_seleccionado" />
-
-    <ImageButton
-        android:id="@+id/btnPlatino"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <ImageButton
+            android:id="@+id/btnOro"
+            android:layout_width="76dp"
+            android:layout_height="74dp"
 
 
-        android:background="#ffff"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnOro"
-        app:layout_constraintStart_toEndOf="@+id/btnOro"
-        app:layout_constraintTop_toTopOf="@+id/btnOro"
-        app:srcCompat="@drawable/ic_platino_no_seleccionado" />
+            android:background="#ffff"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/btnPlata"
+            app:layout_constraintStart_toEndOf="@+id/btnPlata"
+            app:layout_constraintTop_toTopOf="@+id/btnPlata"
+            app:srcCompat="@drawable/ic_oro_no_seleccionado" />
 
-    <ImageButton
-        android:id="@+id/btnDiamante"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <ImageButton
+            android:id="@+id/btnPlatino"
+            android:layout_width="76dp"
+            android:layout_height="74dp"
 
 
-        android:background="#ffff"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnPlatino"
-        app:layout_constraintStart_toEndOf="@+id/btnPlatino"
-        app:layout_constraintTop_toTopOf="@+id/btnPlatino"
-        app:srcCompat="@drawable/ic_diamante_no_seleccionado" />
+            android:background="#ffff"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/btnOro"
+            app:layout_constraintStart_toEndOf="@+id/btnOro"
+            app:layout_constraintTop_toTopOf="@+id/btnOro"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/ic_platino_no_seleccionado" />
 
+        <ImageButton
+            android:id="@+id/btnDiamante"
+            android:layout_width="76dp"
+            android:layout_height="74dp"
+
+
+            android:background="#ffff"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/btnPlatino"
+            app:layout_constraintStart_toEndOf="@+id/btnPlatino"
+            app:layout_constraintTop_toTopOf="@+id/btnPlatino"
+            app:srcCompat="@drawable/ic_diamante_no_seleccionado" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
