--- a/app/src/main/res/layout/activity_beneficios.xml
+++ b/app/src/main/res/layout/activity_beneficios.xml
@@ -140,15 +140,15 @@
         />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-
-
         android:layout_marginTop="8dp"
-
         android:orientation="horizontal"
+        android:gravity="center"
+     
+
+
+
         app:layout_constraintBottom_toTopOf="@+id/linea13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -159,8 +159,9 @@
             android:layout_width="76dp"
             android:layout_height="74dp"
 
+
             android:background="#ffff"
-            android:padding="10dp"
+
             app:layout_constraintBottom_toTopOf="@+id/linea13"
             app:layout_constraintTop_toBottomOf="@+id/textView13"
             app:layout_constraintVertical_bias="0.587"
