--- a/app/src/main/res/layout/activity_beneficios.xml
+++ b/app/src/main/res/layout/activity_beneficios.xml
@@ -145,7 +145,7 @@
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:gravity="center"
-     
+
 
 
 
@@ -154,10 +154,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13">
 
+
         <ImageButton
             android:id="@+id/btnBronce"
             android:layout_width="76dp"
-            android:layout_height="74dp"
+            android:layout_height="match_parent"
 
 
             android:background="#ffff"
