--- a/app/src/main/res/layout/activity_beneficios.xml
+++ b/app/src/main/res/layout/activity_beneficios.xml
@@ -40,12 +40,33 @@
         android:id="@+id/linea13"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="170dp"
         android:background="@drawable/blue_rectangle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+
+    <TextView
+        android:id="@+id/linea12"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@drawable/blue_rectangle"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/linea17"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@drawable/blue_rectangle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
         android:id="@+id/linea16"
@@ -140,15 +161,14 @@
         />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:orientation="horizontal"
         android:gravity="center"
 
 
-
-
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linea13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
