--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,11 +26,12 @@
         android:id="@+id/buttonCancelar"
         android:layout_width="121dp"
         android:layout_height="52dp"
-        android:layout_marginStart="4dp"
         android:layout_marginTop="60dp"
+        android:layout_marginEnd="200dp"
         android:background="@drawable/ic_fondolleno"
         android:text="CANCELAR"
         android:textColor="@color/colorAccent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
         app:layout_constraintStart_toStartOf="@+id/editTextCorreo"
         app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />
 
@@ -38,17 +39,20 @@
         android:id="@+id/buttonIngresar"
         android:layout_width="121dp"
         android:layout_height="52dp"
+        android:layout_marginStart="200dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/ic_fondolleno"
         android:text="INGRESAR"
         android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
+        app:layout_constraintStart_toStartOf="@+id/imageView12"
         app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />
 
     <EditText
         android:id="@+id/editTextContraseña"
         android:layout_width="307dp"
         android:layout_height="50dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/ic_cuadro"
         android:ems="10"
         android:hint="Contraseña"
@@ -57,13 +61,13 @@
         android:paddingTop="4dp"
         app:layout_constraintEnd_toEndOf="@+id/textUsuario2"
         app:layout_constraintStart_toStartOf="@+id/textUsuario2"
-        tools:layout_editor_absoluteY="301dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textUsuario2" />
 
     <EditText
         android:id="@+id/editTextContraseña2"
         android:layout_width="307dp"
         android:layout_height="50dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/ic_cuadro"
         android:ems="10"
         android:hint="Confirmar contraseña"
@@ -115,7 +119,7 @@
         android:id="@+id/editTextCorreo"
         android:layout_width="307dp"
         android:layout_height="50dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/ic_cuadro"
         android:ems="10"
         android:hint="Correo electronico"
@@ -124,8 +128,7 @@
         android:paddingTop="0dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextContraseña2"
         app:layout_constraintStart_toStartOf="@+id/editTextContraseña2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña2"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña2" />
 
     <ImageView
         android:id="@+id/candado"
