--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -73,11 +73,11 @@
                 app:srcCompat="@drawable/ic_flecha_back" />
 
             <TextView
-                android:id="@+id/linea"
+                android:id="@+id/lineaH"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
                 android:layout_marginTop="32dp"
-                android:background="@drawable/blue_rectangle"
+                android:background="#334D6B"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -159,30 +159,15 @@
                 app:layout_constraintStart_toStartOf="@+id/imageView17"
                 app:layout_constraintTop_toBottomOf="@+id/imageView17" />
 
-            <TextView
-                android:id="@+id/linea5"
-                android:layout_width="0dp"
-                android:layout_height="2dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="254dp"
-                android:background="@drawable/blue_rectangle"
-                app:layout_constraintBottom_toTopOf="@+id/linea11"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/recycleViewClub" />
-
             <ImageView
                 android:id="@+id/imageView15"
                 android:layout_width="78dp"
                 android:layout_height="69dp"
                 android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="@+id/linea"
+                app:layout_constraintEnd_toEndOf="@+id/lineaH"
                 app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="@+id/linea"
-                app:layout_constraintTop_toBottomOf="@+id/linea"
+                app:layout_constraintStart_toStartOf="@+id/lineaH"
+                app:layout_constraintTop_toBottomOf="@+id/lineaH"
                 app:srcCompat="@drawable/ic_barraclub" />
 
             <ImageView
@@ -237,6 +222,7 @@
                 android:id="@+id/recycleViewClub"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="52dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linea10">
@@ -245,7 +231,9 @@
                     android:id="@+id/rvClub"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginTop="176dp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
