--- a/app/src/main/res/layout/activity_mi_cuenta.xml
+++ b/app/src/main/res/layout/activity_mi_cuenta.xml
@@ -64,7 +64,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.52"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linea"
+                app:layout_constraintTop_toBottomOf="@+id/lineaH"
                 app:srcCompat="@drawable/ic_logo_mi_cuenta_principal"
                 tools:ignore="VectorDrawableCompat" />
 
@@ -94,7 +94,7 @@
                 app:srcCompat="@drawable/ic_flecha_back" />
 
             <TextView
-                android:id="@+id/linea"
+                android:id="@+id/lineaH"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
                 android:layout_marginTop="32dp"
