--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".activities.HomeActivity">
 
 
     <android.support.design.widget.BottomNavigationView
@@ -143,15 +143,20 @@
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="@+id/firstimage"
                 app:layout_constraintStart_toStartOf="@+id/firstimage"
-                app:layout_constraintTop_toBottomOf="@+id/rbImageView" />
+                app:layout_constraintTop_toBottomOf="@+id/rbImage" />
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Button"
-                tools:layout_editor_absoluteX="303dp"
-                tools:layout_editor_absoluteY="796dp" />
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/secondimage" />
 
 
         </android.support.constraint.ConstraintLayout>
