--- a/app/src/main/res/layout/activity_recuperar_cuenta.xml
+++ b/app/src/main/res/layout/activity_recuperar_cuenta.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecuperarCuentaActivity">
+    tools:context=".activities.RecuperarCuentaActivity">
 
     <Button
         android:id="@+id/buttonEnviar"
